feat: 정통 장기 v2.0 UI/UX 개선 (3D 장군/멍군 이펙트, 중앙 1400px 레이아웃) 및 WebSocket STOMP 실시간 1:1 온라인 장기 구현